# SOAPpop

./: README.md
src/: PG.java  extraparams
src/Beagle/: BeagleFormatChange.java  ChangeToFastPhase.java
src/FastPhase/: FastPHASEgeno.java  RandomSNP.java
src/HaplotypeAge/: CalHaplotypeAge.java
src/HaplotypeDiversity/: GetCorrectInputFiles.java  GetDiversityAverage.java  HaplotypeDiversity.java
src/HaplotypeSharing/: AllHaplotypeSharing.java  DistinctHaplotypeSharing.java  GetSharingAverage.java
src/KendallStatistics/: KendallStatistics.java
src/LDhat/: LDhatGeno.java  LDhatResultAccumulative.java
src/Main/: FormatChange.java  Genotype.java  GenotypeOriginal.java  VcfOriginal.java
src/Microsat/: HaplotypeFormatChangeForMicrosat.java  SNPFormaChangeForMicrosat.java
src/PositiveSelection/: CSS.java  EHH.java  Fst.java  HaplotypeFisherExactTest.java  Pi.java  PositiveSelection.java  RunSnpWindowsPi.java  RunSnpWindowsTheta.java  SignificantFst.java  SnpFisherExactTest.java  SplitTeams.java  TajimaD.java  Theta.java  ihsFormatChange.java
src/software/EIG/src/: Makefile  Makefile.am  admutils.c  convertf  convertf.c  egsubs.c  mcio.c  mergeit  mergeit.c  pcatoy  qpsubs.c  regsubs.c  smarteigenstrat  smartpca  smartrel  test.c  twstats  twsubs.c
src/software/EIG/src/eigensrc/: THREAD  eigsubs.bak.c  smarteigenstrat.c  smartpca.c  smartpca.c-bak  smartrel.c  workqueue.c
src/software/EIG/src/eigensrc/.deps/: pcatoy-eigsubs.Po  pcatoy-pcatoy.Po
src/software/EIG/src/nicksrc/: gauss.c  gds.c  getpars.c  linsubs.c  statsubs.c  strsubs.c  vsubs.c  xsearch.c
(+262 files in other folders)
